<resources>
    <string name="app_name">kokoApp</string>
    <string name="seasons">Сезони</string>
    <string name="food">Храна</string>
    <string name="family">Семейство</string>
    <string name="sport">Спорт</string>
    <string name="category">Категория</string>
    <string name="koko">Koko</string>
    <string name="close">Затвори</string>
    <string name="menu">Меню</string>
    <string name="words_in_english">Думички на английски</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sunny">Sunny</string>
    <string name="word_english">Word_English</string>
    <string name="show_word">Покажи</string>
    <string name="word_bg">Word_BG</string>
    <string name="dog">Dog</string>
    <string name="koko_up">КОКО</string>
    <string name="mother">Mother</string>
    <string name="sandwich">Sandwich</string>
    <string name="soccer">Soccer</string>
</resources>