<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/categories"
        android:title="@string/category">

        <menu>
            <item
                android:id="@+id/seasons"
                android:icon="@drawable/ic_baseline_wb_sunny_24"
                android:title="@string/seasons" />

            <item
                android:id="@+id/family"
                android:icon="@drawable/ic_baseline_family_restroom_24"
                android:title="@string/family" />

            <item
                android:id="@+id/food"
                android:icon="@drawable/ic_baseline_fastfood_24"
                android:title="@string/food" />


            <item
                android:id="@+id/sport"
                android:icon="@drawable/ic_baseline_sports_basketball_24"
                android:title="@string/sport" />

        </menu>
    </item>








</menu>