<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    android:background="@color/white"
    android:id="@+id/drawer_Layout"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            app:title="KOKO"
            android:background="@color/blue3"
            app:titleTextColor="@color/white"
            android:elevation="3dp"
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/dog_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="160dp"
            android:contentDescription="@string/dog"
            android:scaleType="centerCrop"
            android:src="@drawable/dog" />

        <TextView
            android:id="@+id/h1"
            android:layout_width="wrap_content"
            android:text="@string/koko_up"
            android:textColor="@color/pink4"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="36sp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/h2"
            android:layout_width="wrap_content"
            android:text="@string/words_in_english"
            android:textColor="@color/blue3"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="26sp"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:layout_width="match_parent"
            android:id="@+id/frameLayout"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        android:id="@+id/navigationView"
        app:menu="@menu/menu_bar"
        app:headerLayout="@layout/header"
        android:layout_height="match_parent"/>
    </androidx.drawerlayout.widget.DrawerLayout>

