<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/pink3"
    tools:context=".FoodFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:strokeWidth="1dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="14dp"
        android:layout_margin="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/word_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/sandwich"
                android:scaleType="centerCrop"
                android:src="@drawable/sandwich" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/en_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/word_english"
                    android:textSize="32sp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bg_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="32sp"
                    android:layout_marginTop="20dp"
                    android:text="@string/word_bg"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/orange1"
                    android:textStyle="bold" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <!-- Button -->
                <com.google.android.material.button.MaterialButton
                    style="?attr/borderlessButtonStyle"
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_centerInParent="true"
                    android:backgroundTint="@color/blue3"
                    android:padding="10dp"
                    android:text="@string/show_word"
                    android:textColor="@color/black"
                    app:cornerRadius="6dp" />

                <ImageButton
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    android:layout_height="wrap_content"/>

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>